edycja model i dodanie wyswietlania liczby postow uzytkownika

--- a/src/app/user-list/user-list-element/user-list-element.component.html
+++ b/src/app/user-list/user-list-element/user-list-element.component.html
@@ -15,6 +15,9 @@
       <li>
         surname: {{user.surname}}
       </li>
+      <li>
+        liczba postów: {{user.posty ? user.posty.length : 0 }}
+      </li>
     </ul>
   </div>
 </div>
