dodano przycisk do usuwania uzytkownikow (zablokowane usuwanie admina)

--- a/src/app/user-list/user-list-element/user-list-element.component.html
+++ b/src/app/user-list/user-list-element/user-list-element.component.html
@@ -19,5 +19,7 @@
         liczba postów: {{user.posty ? user.posty.length : 0 }}
       </li>
     </ul>
+    <button mat-raised-button color="warn" *ngIf="user.id===1" disabled (click)="deleteUser()">Delete user</button>
+    <button mat-raised-button color="warn"*ngIf="user.id!==1" (click)="deleteUser()">Delete user</button>
   </div>
 </div>
