dodano routingi oraz strone startowa (moze przerobic na logowanie czy cos)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<h1>{{title}}</h1>
-<app-user-list></app-user-list>
+<div class="mat-app-background basic-containter">
+  <button mat-button routerLink="/home">Home</button>
+  <button mat-button routerLink="/allUsers">All users</button>
+</div>
+<router-outlet></router-outlet>
