--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -1,3 +1,4 @@
 <div class="container">
+  <h1>Lista użytkowników</h1>
   <app-user-list-element *ngFor="let user of users" [user]="user"></app-user-list-element>
 </div>
