--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -1,4 +1,7 @@
 <div class="container">
   <h1>Lista użytkowników</h1>
+  <br>
+  <button mat-raised-button class="zarejestruj_button" color="warn">Zarejestruj użytkownika</button>
+
   <app-user-list-element *ngFor="let user of users" [user]="user"></app-user-list-element>
 </div>
