--- a/src/app/user-list/user-list.component.scss
+++ b/src/app/user-list/user-list.component.scss
@@ -4,3 +4,13 @@ h1 {
   margin-bottom: 20px;
   text-align: center;
 }
+.container {
+  display: flex;
+  flex-direction: column;
+
+}
+
+.zarejestruj_button {
+  margin-top: 20px; /* Dodanie odstępu od góry przycisku */
+  align-self: center;
+}
