--- a/src/app/user-formularz/user-formularz.component.html
+++ b/src/app/user-formularz/user-formularz.component.html
@@ -1,6 +1,7 @@
 <div mat-dialog-content>
 
   <form [formGroup]="form" (ngSubmit)="register()">
+    <h1>Zarejestruj się</h1>
     <mat-form-field>
       <mat-label>Email</mat-label>
       <input matInput type="text" formControlName="email"(blur)="onBlur('email')">
