--- a/src/app/public/landing/landing.component.scss
+++ b/src/app/public/landing/landing.component.scss
@@ -1,6 +1,13 @@
 #container {
   text-align: center;
-  margin: 50px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  max-width: 300px;
+  min-width: 300px; /* Dodaj tę linię */
 }
 
 h1 {
