--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,6 @@
 <footer>
-    <p>&copy; 2023 Blog</p>
-    <!-- Dodaj dodatkowe elementy stopki -->
+    <div class = "footertext">
+        &copy; 2023 Blog
+        <a routerLink="/about">About</a>
+    </div>
 </footer>
