--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -7,3 +7,13 @@ footer {
     bottom: 0;
     width: 100%;
   }
+
+.footertext{
+    color: #fff;
+    padding: 10px;
+  }
+.footertext a{
+    color: #ffffff;
+    padding: 10px;
+    margin-right: 10px;
+}
