--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,9 +4,9 @@
         <div class="headerleft">
             <a>Blog</a>
         </div>
-        <button mat-raised-button color="accent" type="submit" [routerLink]="'/home'">Home</button>
-        <button mat-raised-button color="accent" type="submit" [routerLink]="'/home'">Posty</button>
-        <button mat-raised-button color="accent" type="submit" [routerLink]="'/home'">Profil</button>
+        <button class = "but" mat-raised-button color="accent" type="submit" [routerLink]="'/home'">Home</button>
+        <button class = "but" mat-raised-button color="accent" type="submit" [routerLink]="'/home'">Posty</button>
+        <button class = "but" mat-raised-button color="accent" type="submit" [routerLink]="'/home'">Profil</button>
         <div class="headerright">
             <a>Obecnie zalogowano jako:</a>
             <button mat-raised-button color="accent" type="submit" [routerLink]="'/home'">Zaloguj Się</button>
