--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -6,6 +6,18 @@ header {
     border: 1px solid black;
   }
 
+  button {
+    font-size: 20px;
+    color: #fff;
+    padding: 10px;
+    margin-right: 20px;
+  }
+
+  .but {
+    font-size: 34px;
+    color: #fff;
+  }
+
   .headertext {
     background-color: #333;
     color: #fff;
@@ -42,4 +54,10 @@ header {
     position: absolute;
     left: 0;
     margin-left: 10px;
+    font-size: 34px;
+  }
+  .headerleft a{
+    border: 1px solid black;
+    background-color: #4caf50;
+    border-radius: 10px;
   }
