--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,12 +5,12 @@
             <a>Blog</a>
         </div>
         <button class = "but" mat-raised-button color="accent" type="submit" [routerLink]="'/home'">Home</button>
-        <button class = "but" mat-raised-button color="accent" type="submit" [routerLink]="'/home'">Posty</button>
-        <button class = "but" mat-raised-button color="accent" type="submit" [routerLink]="'/home'">Profil</button>
+        <button class = "but" mat-raised-button color="accent" type="submit" [routerLink]="'/postlist'">Posty</button>
+        <button class = "but" mat-raised-button color="accent" type="submit" [routerLink]="'/profile'">Profil</button>
         <div class="headerright">
             <a>Obecnie zalogowano jako:</a>
-            <button mat-raised-button color="accent" type="submit" [routerLink]="'/home'">Zaloguj Się</button>
-            <button mat-raised-button color="accent" type="submit" [routerLink]="'/home'">Zarejestruj Się</button>
+            <button mat-raised-button color="accent" type="submit" [routerLink]="'/login'">Zaloguj Się</button>
+            <button mat-raised-button color="accent" type="submit" [routerLink]="'/register'">Zarejestruj Się</button>
         </div>
     </div>
     
