komentarze sie wyswietlaja

--- a/src/app/logged/user-profile/post-profile/post-profile.component.html
+++ b/src/app/logged/user-profile/post-profile/post-profile.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div>
-    Dane:
+    Post
     <ul>
       <li>
         title: {{post.title}}
@@ -13,4 +13,6 @@
       </li>
     </ul>
   </div>
+  Komentarze:
+    <app-comments-post *ngFor="let comment of post.comments" [comment]="comment"></app-comments-post>
 </div>
