--- a/src/app/logged/user-profile/post-profile/comments-post/comments-post.component.scss
+++ b/src/app/logged/user-profile/post-profile/comments-post/comments-post.component.scss
@@ -9,21 +9,23 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Cień */
 }
 
-/* Styl dla h3 */
-.container h3 {
-  color: #2c3e50; /* Granatowy kolor tekstu */
-  margin-bottom: 10px; /* Margines na dole */
-}
-
-/* Styl dla ul */
+/* Styl dla ul w .container */
 .container ul {
   list-style: none; /* Usunięcie domyślnego znacznika listy */
   padding: 0; /* Usunięcie wewnętrznego odstępu listy */
 }
 
-/* Styl dla li */
+/* Styl dla li w .container */
 .container li {
   margin-bottom: 8px; /* Margines na dole dla każdego elementu listy */
   color: #333; /* Kolor tekstu */
 }
 
+/* Styl dla .comment-container */
+.comment-container {
+  background-color: #ecf0f1; /* Kolor tła dla kontenera komentarza */
+  padding: 10px; /* Wewnętrzny odstęp dla kontenera komentarza */
+  border: 1px solid #ddd; /* Ramka wokół kontenera komentarza */
+  border-radius: 4px; /* Zaokrąglenie rogów dla kontenera komentarza */
+  margin-top: 10px; /* Margines na górze dla kontenera komentarza */
+}
