--- a/src/app/logged/user-profile/user-profile.component.html
+++ b/src/app/logged/user-profile/user-profile.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="dane">
   <div>
     Dane:
     <ul>
@@ -19,5 +19,8 @@
       </li>
     </ul>
   </div>
+</div>
+<div class="kontener-posty">
   <app-post-profile *ngFor="let post of user.posty" [post]="post"></app-post-profile>
 </div>
+
