--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,28 +1,58 @@
 <header>
     <!-- Dodaj dodatkowe elementy nagłówka -->
-    <div class = "headertext">
-        <div class="headerleft">
-            <a>Blog</a>
-        </div>
-        <button class = "but" mat-raised-button color="accent" type="submit" [routerLink]="'/home'">Home</button>
-        <button class = "but" mat-raised-button color="accent" type="submit" [routerLink]="'/postlist'">Posty</button>
-        <button class = "but" mat-raised-button color="accent" type="submit" [routerLink]="'/profile'">Profil</button>
-        <div class="headerright">
-            <a>Obecnie zalogowano jako:</a>
-            <button mat-raised-button color="accent" type="submit" [routerLink]="'/login'">Zaloguj Się</button>
-            <button mat-raised-button color="accent" type="submit" [routerLink]="'/register'">Zarejestruj Się</button>
-        </div>
+
+    <div *ngIf="isLoggedIn; else notLoggedIn">
+        
+        <ng-container *ngIf="isAdmin">
+            <div class="headertext">
+                <div class="headerleft">
+                    <a>Blog</a>
+                </div>
+                <button class="but" mat-raised-button color="accent" type="submit" [routerLink]="'/home'">Home</button>
+                <button class="but" mat-raised-button color="accent" type="submit"
+                    [routerLink]="'/postlist'">Posty</button>
+                <button class="but" mat-raised-button color="accent" type="submit"
+                    [routerLink]="'/profile'">Profil</button>
+                <button class="but" mat-raised-button color="accent" type="submit"
+                    [routerLink]="'/profile'">Lista Użytkowników</button>
+                <div class="headerright">
+                    <a>Obecnie zalogowano jako:</a>
+                    <button mat-raised-button color="accent" type="submit" (click)="logout()">Wyloguj Się</button>
+                </div>
+            </div>
+        </ng-container>
+        <ng-container *ngIf="!isAdmin">
+            <div class="headertext">
+                <div class="headerleft">
+                    <a>Blog</a>
+                </div>
+                <button class="but" mat-raised-button color="accent" type="submit" [routerLink]="'/home'">Home</button>
+                <button class="but" mat-raised-button color="accent" type="submit"
+                    [routerLink]="'/postlist'">Posty</button>
+                <button class="but" mat-raised-button color="accent" type="submit"
+                    [routerLink]="'/profile'">Profil</button>
+                <div class="headerright">
+                    <a>Obecnie zalogowano jako:</a>
+                    <button mat-raised-button color="accent" type="submit" (click)="logout()">Wyloguj Się</button>
+                </div>
+            </div>
+
+        </ng-container>
+
     </div>
-    <div *ngIf="1==1; else notLoggedIn">
-        <ng-container *ngIf="'user' == 'user'">
-          a
-        </ng-container>
-        <ng-container *ngIf="'admin' == 'admin'">
-          b
-        </ng-container>
-      </div>
-      <ng-template #notLoggedIn>
-        c
-      </ng-template>
-    
+    <ng-template #notLoggedIn>
+        <div class="headertext">
+            <div class="headerleft">
+                <a>Blog</a>
+            </div>
+            <button class="but" mat-raised-button color="accent" type="submit" [routerLink]="'/home'">Home</button>
+            <div class="headerright">
+                <button mat-raised-button color="accent" type="submit" [routerLink]="'/login'">Zaloguj Się</button>
+                <button mat-raised-button color="accent" type="submit" [routerLink]="'/register'">Zarejestruj Się</button>
+            </div>
+        </div>
+    </ng-template>
+
+
+
 </header>
