--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div mat-dialog-content class="center-form">
-  <form [formGroup]="form" (ngSubmit)="login()">
+  <form [formGroup]="form">
     <h1>Zaloguj się</h1>
 
     <mat-form-field>
@@ -12,6 +12,6 @@
       <input matInput type="password" formControlName="password">
     </mat-form-field>
 
-    <button mat-raised-button color="accent" type="submit" [disabled]="form.invalid">Login</button>
+    <button mat-raised-button color="accent" (click)="login()" type="submit" [disabled]="form.invalid">Login</button>
   </form>
 </div>
