--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,44 +1,46 @@
 <header>
-    <div *ngIf="isLoggedIn; else notLoggedIn">
-      <div class="headertext" *ngIf="isAdmin; else regularUser">
-        <div class="headerleft">
-          <a>Blog</a>
-        </div>
-        <button class="but" mat-raised-button color="accent" [routerLink]="'/home'">Home</button>
-        <button class="but" mat-raised-button color="accent" [routerLink]="'/postlist'">Posty</button>
-        <button class="but" mat-raised-button color="accent" [routerLink]="'/admin/allUsers'">Profil</button>
-        <button class="but" mat-raised-button color="accent" [routerLink]="'/admin'">Lista Użytkowników</button>
-        <div class="headerright">
-          <a>Obecnie zalogowano jako:</a>
-          <button mat-raised-button color="accent" (click)="logout()">Wyloguj Się</button>
-        </div>
-      </div>
-      <ng-template #regularUser>
-        <div class="headertext">
-          <div class="headerleft">
-            <a>Blog</a>
-          </div>
-          <button class="but" mat-raised-button color="accent" [routerLink]="'/home'">Home</button>
-          <button class="but" mat-raised-button color="accent" [routerLink]="'/postlist'">Posty</button>
-          <button class="but" mat-raised-button color="accent" [routerLink]="'/logged/user-profile'">Profil</button>
-          <div class="headerright">
-            <a>Obecnie zalogowano jako:</a>
-            <button mat-raised-button color="accent" (click)="logout()">Wyloguj Się</button>
-          </div>
-        </div>
-      </ng-template>
-    </div>
-    <ng-template #notLoggedIn>
+  <div *ngIf="isLoggedIn(); else notLoggedIn">
+    <div *ngIf="isAdmin(); else regularUser">
+      <!-- Sekcja dla administratora -->
       <div class="headertext">
         <div class="headerleft">
           <a>Blog</a>
         </div>
         <button class="but" mat-raised-button color="accent" [routerLink]="'/home'">Home</button>
+        <button class="but" mat-raised-button color="accent" [routerLink]="'/admin/allUsers'">Lista Użytkowników</button>
         <div class="headerright">
-          <button mat-raised-button color="accent" [routerLink]="'/login'">Zaloguj Się</button>
-          <button mat-raised-button color="accent" [routerLink]="'/register'">Zarejestruj Się</button>
+          <a>Obecnie zalogowano jako:</a>
+          <button mat-raised-button color="accent" (click)="logout()">Wyloguj Się</button>
+        </div>
+      </div>
+    </div>
+    <ng-template #regularUser>
+      <!-- Sekcja dla zwykłego użytkownika -->
+      <div class="headertext">
+        <div class="headerleft">
+          <a>Blog</a>
+        </div>
+        <button class="but" mat-raised-button color="accent" [routerLink]="'/home'">Home</button>
+        <button class="but" mat-raised-button color="accent" [routerLink]="'/postlist'">Posty</button>
+        <button class="but" mat-raised-button color="accent" [routerLink]="'/logged/user-profile'">Profil</button>
+        <div class="headerright">
+          <a>Obecnie zalogowano jako:</a>
+          <button mat-raised-button color="accent" (click)="logout()">Wyloguj Się</button>
         </div>
       </div>
     </ng-template>
-  </header>
-  
+  </div>
+  <ng-template #notLoggedIn>
+    <!-- Sekcja dla niezalogowanego użytkownika -->
+    <div class="headertext">
+      <div class="headerleft">
+        <a>Blog</a>
+      </div>
+      <button class="but" mat-raised-button color="accent" [routerLink]="'/home'">Home</button>
+      <div class="headerright">
+        <button mat-raised-button color="accent" [routerLink]="'/login'">Zaloguj Się</button>
+        <button mat-raised-button color="accent" [routerLink]="'/register'">Zarejestruj Się</button>
+      </div>
+    </div>
+  </ng-template>
+</header>
