--- a/src/app/user-formularz/user-formularz.component.html
+++ b/src/app/user-formularz/user-formularz.component.html
@@ -16,9 +16,12 @@
 
     <mat-form-field>
       <mat-label>Password</mat-label>
-      <input matInput type="text" formControlName="password"(blur)="onBlur('password')" >
-      <div *ngIf="fieldBlurred['password']&&password.invalid && (password.dirty || password.touched)" class="error-message">Password: min 4, 1 znak specjalny</div>
+      <input matInput type="password" formControlName="password" (blur)="onBlur('password')" [appPasswordSpecialValidator]="['!', '@', '#', '$', '%', '^', '&', '*']">
+      <div *ngIf="fieldBlurred['password'] && password.invalid && (password.dirty || password.touched)" class="error-message">
+        Password: min 4, 1 znak specjalny
+      </div>
     </mat-form-field><br>
+
 
     <mat-form-field>
       <mat-label>Name</mat-label>
