--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -39,7 +39,7 @@
       <button class="but" mat-raised-button color="accent" [routerLink]="'/home'">Home</button>
       <div class="headerright">
         <button mat-raised-button color="accent" [routerLink]="'/login'">Zaloguj Się</button>
-        <button mat-raised-button color="accent" [routerLink]="'/register'">Zarejestruj Się</button>
+        <button mat-raised-button color="accent" [routerLink]="'/user-formularz'">Zarejestruj Się</button>
       </div>
     </div>
   </ng-template>
