--- a/src/app/public/landing/landing.component.html
+++ b/src/app/public/landing/landing.component.html
@@ -1,5 +1,5 @@
 <div id="container">
   <h1>Strona landing</h1>
-  <button mat-raised-button color="primary "routerLink="/login">Login</button><br>
-  <button mat-raised-button color="primary "routerLink="/user-formularz">Register</button>
+  <button routerLink="/login">Login</button><br>
+  <button routerLink="/user-formularz">Register</button>
 </div>
