--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -3,10 +3,11 @@ footer {
     color: #fff;
     padding: 10px;
     text-align: center;
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 100%;
     border: 1px solid black;
+    margin-top: 30px;
   }
 
 .footertext{
