--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -3,16 +3,17 @@ header {
     color: #fff;
     padding: 10px;
     text-align: center;
-    position: fixed;
+    position: relative;
     top: 0;
     width: 100%;
     border: 1px solid black;
+    margin-bottom: 30px;
   }
 
   button {
     font-size: 20px;
     color: #fff;
-    padding: 10px;
+    padding: 20px;
     margin-right: 20px;
   }
 
@@ -57,8 +58,9 @@ header {
     position: absolute;
     left: 0;
     margin-left: 10px;
-    font-size: 34px;
+    font-size: 40px;
   }
+
   .headerleft a{
     border: 1px solid black;
     background-color: #4caf50;
