--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,19 +1,42 @@
-form {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+#container {
+  text-align: center;
+  position: relative;
+  align-items: center;
   display: flex;
   flex-direction: column;
-  max-width: 300px;
-  min-width: 300px; /* Dodaj tę linię */
+  max-width: 100%;
+  min-width: 100%;
+  min-height: 80%;
+}
+
+form {
+  max-width: 100%;
+  min-width: 300px;
   border: 2px solid #333;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 40px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+
 button {
-  width: 100%;
+  margin-top: 20px;
+  padding: 16px;
+  font-size: 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.but {
+  max-width: 30%;
+  max-height: 30%;
+  font-size: 20px;
   margin-top: 20px;
 }
 
@@ -21,4 +44,13 @@ button {
   color: red;
   font-size: 12px;
   margin-top: 5px;
+}
+
+.content-center {
+  min-width: 100%;
+  font-size: 12px;
+  margin-top: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
