dodalem filtr title case przy wyswietlaniu emaila w liscie admina

--- a/src/app/admin/user-list/user-list-element/user-list-element.component.html
+++ b/src/app/admin/user-list/user-list-element/user-list-element.component.html
@@ -4,7 +4,7 @@
   Dane:
     <ul>
       <li>
-        email: {{user.email}}
+        email: {{ user.email.toString() | titlecase }} //dodalem filtr titlecase
       </li>
       <li>
         password:{{user.password}}
