Dodanie postlist.component.ts na razie wersja indev do poprawy

--- a/src/app/logged/user-profile/post-profile/post-profile.component.html
+++ b/src/app/logged/user-profile/post-profile/post-profile.component.html
@@ -3,6 +3,10 @@
     Post
     <ul>
       <li>
+        <div class="btn-text-right">
+          <button type="button" class="btn btn-primary">Edytuj post</button>
+        </div>
+
         title: {{post.title}}
       </li>
       <li>
@@ -11,6 +15,7 @@
       <li>
         liczba likow: {{post.liczbaLikow? post.liczbaLikow.length : 0}}
       </li>
+
     </ul>
   </div>
   Komentarze:
