--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,16 +1,24 @@
-<div id="container">
+<div id = "container">
+
   <form [formGroup]="form" (ngSubmit)="login()">
 
     <h1>Zaloguj się</h1>
 
-      <mat-label>Username</mat-label>
-      <input matInput type="text" formControlName="username" required>
+      <mat-form-field>
+        <mat-label>Username</mat-label>
+        <input matInput type="text" formControlName="username" required>
+        <div></div>
+      </mat-form-field><br>
 
-      <mat-label>Password</mat-label>
-      <input class= matInput type="password" formControlName="password" required>
+      <mat-form-field>
+        <mat-label>Password</mat-label>
+        <input class= matInput type="password" formControlName="password" required>
+        <div></div>
+      </mat-form-field><br>
 
-    <button class="but" type="submit" [disabled]="form.invalid">Login</button>
-    
+<!--    <button class="but" type="submit" [disabled]="form.invalid">Login</button>-->
+    <button mat-raised-button color="but" type="submit" [disabled]=form.invalid>Login</button>
   </form>
+
 </div>
 
