--- a/src/app/postlist/postlist.component.html
+++ b/src/app/postlist/postlist.component.html
@@ -1,12 +1,25 @@
 <p>postlist works!</p>
 <p>wersja Indev</p>
+
 <div *ngFor="let post of postList" class="post-item" (click)="onSelect(post)">
+
   <p><span class="pbody">Id: {{post.id}}</span></p>
   <p><span class="pbody">Tytuł: {{post.title}}</span></p>
   <p><span class="pbody">Treść: {{post.content}}</span></p>
   <p><span class="pbody">Edytowane?: {{post.wasEdited}}</span></p>
-  <p><span class="pbody">Liczba like'ów: {{post.liczbaLikow}}</span></p>
-  <p><span class="pbody">Komentarze: {{post.comments}}</span></p>
+  <div *ngIf="post.liczbaLikow != null;else elseBlock">
+    <p><span class="pbody">Liczba like'ów: {{post.liczbaLikow.length}}</span></p>
+  </div>
+  <ng-template #elseBlock><p><span class="pbody">Liczba like'ów: 0</span></p></ng-template>
+
+<!--  <p><span class="pbody">Liczba like'ówTEST: {{null}}</span></p>-->
+<div class="post-comment">
+  <div *ngFor="let comment of post.comments">
+    <p><span class="pbody"> <strong>{{comment.nickname}}</strong> {{comment.content}}</span></p>
+  </div>
+</div>
+
+
 </div>
 
 
