--- a/src/app/postlist/postlist.component.scss
+++ b/src/app/postlist/postlist.component.scss
@@ -18,4 +18,13 @@ p{
 .post-item p{
   text-align: left;
 }
+.post-comment{
+  max-width: 400px; /* Maksymalna szerokość kontenera */
+  margin: 10px auto; /* Automatyczne centrowanie kontenera */
+  background-color: #f5f5f5; /* Kolor tła */
+  padding: 10px; /* Wewnętrzny odstęp */
+  border: 1px solid #ddd; /* Ramka wokół kontenera */
+  border-radius: 8px; /* Zaokrąglenie rogów */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Cień */
+}
 
