--- a/src/app/postlist/postlist.component.scss
+++ b/src/app/postlist/postlist.component.scss
@@ -28,3 +28,11 @@ p{
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Cień */
 }
 
+.selected{
+  backgroud-color: rgba(235, 253, 17, 0.91)
+}
+
+.selectedPost{
+  backgroud-color: rgba(235, 253, 17, 0.91)
+}
+
