--- a/src/app/logged/user-profile/user-profile.component.html
+++ b/src/app/logged/user-profile/user-profile.component.html
@@ -18,11 +18,12 @@
         liczba postów: {{user.posty ? user.posty.length : 0 }}
       </li>
     </ul>
-
   </div>
 </div>
+
 <div class="kontener-posty">
+  <div class="button-container">
+    <button class="but" mat-raised-button color="accent" [routerLink]="'/logged/user-profile/add-post'">Dodaj Post</button>
+  </div>
   <app-post-profile *ngFor="let post of user.posty" [post]="post"></app-post-profile>
 </div>
-
-
