dodanie edycji uzytkownika

--- a/src/app/admin/user-list/user-list-element/user-list-element.component.html
+++ b/src/app/admin/user-list/user-list-element/user-list-element.component.html
@@ -21,5 +21,6 @@
     </ul>
     <button mat-raised-button color="warn" *ngIf="user.id===1" disabled (click)="deleteUser()">Delete user</button>
     <button mat-raised-button color="warn"*ngIf="user.id!==1" (click)="deleteUser()">Delete user</button>
+    <button mat-raised-button color="warn" color="warn" (click)="editUser()">Edit user</button>
   </div>
 </div>
