--- a/src/app/admin/user-list/user-list-element/user-list-element.component.scss
+++ b/src/app/admin/user-list/user-list-element/user-list-element.component.scss
@@ -1,29 +1,41 @@
 /* Styl dla .container */
 .container {
-  max-width: 400px; /* Maksymalna szerokość kontenera */
-  margin: 20px auto; /* Automatyczne centrowanie kontenera */
-  background-color: #f5f5f5; /* Kolor tła */
-  padding: 20px; /* Wewnętrzny odstęp */
-  border: 1px solid #ddd; /* Ramka wokół kontenera */
-  border-radius: 8px; /* Zaokrąglenie rogów */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Cień */
+  display: flex;
+  flex-direction: column;
+  max-width: 400px;
+  margin: 20px auto;
+  background-color: #f5f5f5;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 /* Styl dla h3 */
 .container h3 {
-  color: #2c3e50; /* Granatowy kolor tekstu */
-  margin-bottom: 10px; /* Margines na dole */
+  color: #2c3e50;
+  margin-bottom: 10px;
 }
 
 /* Styl dla ul */
 .container ul {
-  list-style: none; /* Usunięcie domyślnego znacznika listy */
-  padding: 0; /* Usunięcie wewnętrznego odstępu listy */
+  list-style: none;
+  padding: 0;
 }
 
 /* Styl dla li */
 .container li {
-  margin-bottom: 8px; /* Margines na dole dla każdego elementu listy */
-  color: #333; /* Kolor tekstu */
+  margin-bottom: 8px;
+  color: #333;
+}
+
+/* Przyciski */
+.container button {
+  margin-top: 10px;
+}
+
+
+button {
+  margin-right: 90px;
 }
 
