--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -21,7 +21,7 @@
           <a>Blog</a>
         </div>
         <button class="but" mat-raised-button color="accent" [routerLink]="'/home'">Home</button>
-        <button class="but" mat-raised-button color="accent" [routerLink]="'/postlist'">Posty</button>
+        <button class="but" mat-raised-button color="accent" [routerLink]="'/logged/postlist'">Posty</button>
         <button class="but" mat-raised-button color="accent" [routerLink]="'/logged/user-profile'">Profil</button>
         <div class="headerright">
           <a>Zalogowano jako: {{userSession.nickname}}</a><br>
