dodawanie i usuwanie lików działa, bialy kolor przycisku oznacza nie dany like, niebieski dany

--- a/src/app/logged/postlist/postlist.component.html
+++ b/src/app/logged/postlist/postlist.component.html
@@ -16,7 +16,7 @@
     <p><span class="pbody"> <strong>{{comment.nickname}}</strong> {{comment.content}}</span></p>
   </div>
 </div>
-  <app-add-like (dodajLikePost)="addLike()" ></app-add-like>
+  <app-add-like [czyWyswielic]="likedPost(post.id)" (dodajLikePost)="addLike()" ></app-add-like>
 </div>
 
 
