--- a/src/app/logged/postlist/post-po-id/post-po-id.component.scss
+++ b/src/app/logged/postlist/post-po-id/post-po-id.component.scss
@@ -1,14 +1,5 @@
-/* Dodaj poniższe style dla inputa textowego */
-input[type="text"] {
-  padding: 10px;
-  margin: 10px auto; /* Zmieniono margin na auto, aby wyśrodkować */
-  display: block; /* Zapewnia, że input jest blokowy, co pozwala na ustawienie marginesów */
-  border: 1px solid #ddd;
-  border-radius: 5px;
-}
-
-/* Zaktualizuj styl dla .post-item */
-.post-item {
+/* Dodaj styl dla .post-header */
+.post-header {
   max-width: 400px;
   margin: 20px auto;
   background-color: #f5f5f5;
@@ -19,28 +10,26 @@ input[type="text"] {
   position: relative; /* Dodaj pozycję względną */
 }
 
-
-
 /* Dodaj styl dla zaznaczonego elementu */
-.selected {
+.post-header.selected {
   background-color: lightblue;
 }
 
 /* Zaktualizuj styl dla p */
-.post-item p {
+.post-header p {
   text-align: left;
   margin-bottom: 10px; /* Dodaj odstęp między paragrafami */
 }
 
 /* Dodaj styl dla .post-comment */
 .post-comment {
-  max-width: 400px;
-  margin: 10px auto;
-  background-color: #f5f5f5;
-  padding: 10px;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  max-width: 100%; /* Zaktualizowano szerokość, aby element był responsywny */
+  margin-top: 10px; /* Dodano margines na górze */
+}
+
+/* Dodaj styl dla komentarzy */
+.post-comment p {
+  margin: 5px 0; /* Dodaj odstęp między komentarzami */
 }
 
 /* Dodaj styl dla zaznaczonego postu */
