Dodanie edycji tytułu posta (mozna poprawic jeszcze zeby edycja byla widoczna bez zatwierdzenia)

--- a/src/app/logged/user-profile/post-profile/post-profile.component.html
+++ b/src/app/logged/user-profile/post-profile/post-profile.component.html
@@ -12,6 +12,10 @@
       <li>
         content: {{editing ? editedContent : post.content}}
         <div *ngIf="editing">
+          <textarea [(ngModel)]="editedTitle"></textarea>
+          <tr>
+
+          </tr>
           <textarea [(ngModel)]="editedContent"></textarea>
         </div>
         <div class="btn-text-right">
