--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,6 +5,6 @@
     <title>Strona główna</title>
 </head>
 <body class = "text">
-    <div>Strona bloga</div>
+    <div>Witaj na naszym blogu!</div>
 </body>
 </html>
