gites majonez stopka

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,11 @@
-<p>about works!</p>
+<html>
+    <body>
+        <div class = "text">
+            <p>Twórcy:</p>
+            <p>Mateusz Zaczeniuk</p>
+            <p>Michał Lewczuk</p>
+            <p>Adrian Ostapowicz</p>
+        </div>
+    </body>
+</html>
+
