--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,7 +1,7 @@
-text {
-    color: #2c3e50;
-    font-size: 32px;
-    margin-bottom: 20px;
-    text-align: center;
-    align-items: center;
-  }
+.text {
+  color: #2c3e50;
+  font-size: 32px;
+  margin-bottom: 10px;
+  text-align: center;
+  position: relative;
+}
