zmiana nazwy tworcow

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,7 +2,7 @@
     <body>
         <div class = "text">
             <p>Twórcy:</p>
-            <p>Mateusz Zaczeniuk</p>
+            <p>Łukasz Kiersnowski</p>
             <p>Michał Lewczuk</p>
             <p>Adrian Ostapowicz</p>
         </div>
