projekt gotowy pod jsa

--- a/src/app/admin/user-list/user-list-element/user-list-element.component.html
+++ b/src/app/admin/user-list/user-list-element/user-list-element.component.html
@@ -19,6 +19,9 @@
         liczba obserwujacych: {{user.liczbaObserwujacych? user.liczbaObserwujacych.length: 0}}
       </li>
       <li>
+        liczba obserwowanych: {{user.osobyKtoreObserwuje ? user.osobyKtoreObserwuje.length : 0 }}
+      </li>
+      <li>
         liczba postów: {{user.posty ? user.posty.length : 0 }}
       </li>
     </ul>
