--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -22,6 +22,7 @@
         </div>
         <button class="but" mat-raised-button color="accent" [routerLink]="'/home'">Home</button>
         <button class="but" mat-raised-button color="accent" [routerLink]="'/logged/postlist'">Posty</button>
+        <button class="but" mat-raised-button color="accent" [routerLink]="'/logged/postlist/obserwujacy'">Obserwujący</button>
         <button class="but" mat-raised-button color="accent" [routerLink]="'/logged/user-profile'">Profil</button>
         <div class="headerright">
           <a>Zalogowano jako: {{userSession.nickname}}</a><br>
