--- a/src/app/logged/user-profile/user-profile.component.html
+++ b/src/app/logged/user-profile/user-profile.component.html
@@ -16,12 +16,18 @@
           surname: {{user.surname}}
         </li>
         <li>
+          liczba obserwatorów: {{user.liczbaObserwujacych ? user.liczbaObserwujacych.length : 0 }}
+        </li>
+        <li>
+          liczba obserwowanych: {{user.osobyKtoreObserwuje ? user.osobyKtoreObserwuje.length : 0 }}
+        </li>
+        <li>
           liczba postów: {{user.posty ? user.posty.length : 0 }}
         </li>
       </ul>
     </div>
   </div>
-  
+
   <div class="kontener-posty">
     <div class="button-container">
       <button class="but" mat-raised-button color="accent" [routerLink]="'/logged/user-profile/add-post'">Dodaj Post</button>
