--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
-<footer>
-    <div class = "footertext">
-        &copy; 2023 Blog
-        <a routerLink="/about">About</a>
-    </div>
-</footer>
+<!--<footer>-->
+<!--    <div class = "footertext">-->
+<!--        &copy; 2023 Blog-->
+<!--        <a routerLink="/about">About</a>-->
+<!--    </div>-->
+<!--</footer>-->
